fixed bird list layout, added birds link to navbar and fixed footer alignment

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
+  flex-grow: 0;
   height: 80px;
+  width: 100%;
   color: $cream;
   background: $light-grey;
   font-weight: 700;
